Trip Deletion funcationality added
